<resources>
    <string name="app_name">CA2Android</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="active_client">Active Client</string>
    <string name="view">View</string>
    <string name="add">Add</string>

    <string name="textview">TextView</string>
    <string name="weight">weight</string>
    <string name="name">Name:</string>
    <string name="id">ID</string>
    <string name="_0">0</string>

    <string name="client_name">Client Name</string>
    <string name="client_weight">Client weight</string>
    <string name="name_of_client">Name of client</string>
    <string name="yes_no">Yes/No</string>
    <string name="go_back">Go Back</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>

</resources>